--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <head>
         <meta charset='utf-8'>
-        <title>bss</title>
+        <title>Bee Swarm Simulator</title>
     </head>
     <body onload='main()'>
 <canvas id='gl-canvas'></canvas>
